--- a/index.html
+++ b/index.html
@@ -160,15 +160,18 @@
             }
 
             #content {
+                left: 0;
+                right: 0;
+                height: auto;
                 text-align: center;
                 overflow: visible;
-                height: 100vh;
+                background: #000;
             }
 
             .container {
                 page-break-after: always;
-                border: none;
                 margin: 0px;
+                border: none;
             }
         }
     </style>
