--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div id="content" class="grid">
             </div>
         </div>
+        <canvas id="canvas"></canvas>
         <script src="./src/data.js"></script>
         <script src="./src/init.js"></script>
         <script src="./src/functions.js"></script>
