--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>placard generator</title>
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22><link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚩</text></svg>">
+    </text></svg>">
     </head>
     <body>
         <div id="container">
@@ -74,7 +76,7 @@
             <div class="flexCont sticky">
                 <input type="text" class="hideprint" name="country" list="countrylist" id="input" onkeydown="search(this)"
                     placeholder="Enter a country name">
-                <input type="number" name="quantity" value="1" id="quantity" class="quantity hideprint" min="1" max="50" onblur=enforceMinMax(this) step="1">
+                <input type="number" name="quantity" value="1" id="quantity" class="quantity hideprint" min="1" max="50" onkeydown="getElementById('input')" onblur=enforceMinMax(this) step="1">
                 <button onclick="search(document.getElementById('input'), 'button')" class="hideprint">Add</button>
                 <div class="right">
                     <button class="leftButton" onclick="changeView('list', this);">☰</button>
